# kalendas

./: .gitignore  AUTHORS  ChangeLog  DEPENDENCES  DEPENDENCIES  LEAME  LEAME.md  LICENCIA  Makefile.am  NEWS  README  README.md  autoclean.sh  autogen.sh  configure.ac  es.po  kalendas.pot  pkg-checkvar.m4  pt_BR.po
doc/: Makefile.am  encoding.texi.in  kalendas.texi
extra/: Makefile.am  kalendas-bash-completion.sh  nonls.diff  substvars.sh.in
man/: Makefile.am  kalendas.en.pod  kalendas.es.pod  kalendas.pt_BR.pod
tests/: Makefile.am  test0.sh  test1.sh  test2.sh
woe/: Makefile.am  Makefile.mgw  kalendas.bat.in
